# pyrattler-recipe-autogen

./: .actrc  .bandit  .gitignore  .mailmap  .markdownlint.json  .pre-commit-config.yaml  ACT_USAGE.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE_PROCESS.md  SECURITY.md  WORKFLOW_SPLIT.md  efficiency_report.md  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  issue-labeler.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml
.github/workflows/: ci.yml  labeler.yml  maintenance.yml  publish.yml  quality-monitoring.yml  rattler-build.yml  release.yml  sonarqube.yml  stale.yml  update-pixi-lock-file.yml
recipe/: recipe.yaml
src/pyrattler_recipe_autogen/: __init__.py  cli.py  core.py  demo.py
tests/: __init__.py  test_cli.py  test_core.py  test_demo.py  test_init.py
